fix: use min-height instead of height to prevent overflow

--- a/content/ljtech/collections/web-fundamentals/posts/web-fundamentals-html/box-model/src/stylesheet.css
+++ b/content/ljtech/collections/web-fundamentals/posts/web-fundamentals-html/box-model/src/stylesheet.css
@@ -27,7 +27,7 @@ body {
 	align-items: center;
 	justify-content: center;
 	gap: 2rem;
-	height: 100vh;
+	min-height: 100vh;
 	width: 100vw;
 	max-width: 100%;
 	background-color: var(--page-bg);
